common/force-app/main/default/objects/EOI_Team_and_Advisors__c/EOI_Team_and_Advisors__c.object-meta.xml
<CustomObject>
    <description>This object will be associated to the EOI Record.</description>
    <label>EOI Team and Advisors</label>
    <nameField>
        <label>Team member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EOI Team and Advisors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>