common/force-app/main/default/objects/EOI_Team_and_Advisors__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Founder</fullName>
            </value>
            <value>
                <fullName>Management Team</fullName>
            </value>
            <value>
                <fullName>Advisors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>