common/force-app/main/default/objects/EOI_Team_and_Advisors__c/fields/Founder_Picture__c.field-meta.xml
<CustomField>
    <fullName>Founder_Picture__c</fullName>
    <label>Founder Picture</label>
    <type>Url</type>
</CustomField>