common/force-app/main/default/objects/EOI_Team_and_Advisors__c/fields/Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Member_Role__c</fullName>
    <label>Team Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>