common/force-app/main/default/objects/EOI_Team_and_Advisors__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>This order the founders in the EOI Preview</description>
    <label>Order</label>
    <length>2</length>
    <type>Text</type>
</CustomField>