common/force-app/main/default/objects/EOI_Team_and_Advisors__c/fields/Team_Member_Description__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Description__c</fullName>
    <label>Team Member Description</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>