common/force-app/main/default/objects/EOI_Team_and_Advisors__c/fields/Team_member_Linkedin__c.field-meta.xml
<CustomField>
    <fullName>Team_member_Linkedin__c</fullName>
    <label>Team member Linkedin</label>
    <type>Url</type>
</CustomField>