common/force-app/main/default/objects/EOI_Team_and_Advisors__c/fields/Team_Related_EOI__c.field-meta.xml
<CustomField>
    <fullName>Team_Related_EOI__c</fullName>
    <label>Team Related EOI</label>
    <referenceTo>EOI__c</referenceTo>
    <relationshipLabel>EOI Team and Advisors</relationshipLabel>
    <relationshipName>EOI_Team_and_Advisors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>